# XRF

./: .gitignore  CMakeLists.txt  README.md  sim.cpp
include/: SimulationConfig.hh  SimulationMessenger.hh  actionInitialization.hh  detectorConstruction.hh  detectorElement.hh  detectorType.hh  eventAction.hh  multiDetector.hh  physicsList.hh  primaryGenerator.hh  runAction.hh  (+3 more)
own_sim/: CMakeCache.txt  CMakeLists.txt  run_case.mac  run_geom.mac  sim.cc  tmp_run.mac  vis.mac
own_sim/include/: ActionInitialization.hh  DetectorConstruction.hh  DetectorSD.hh  PMDetectorConstruction.hh  PMPhysicsList.hh  PMPrimaryGenerator.hh  PMSensitiveDetector.hh  PrimaryGeneratorAction.hh  RunAction.hh  SimulationConfig.hh  SteppingAction.hh  XRFMessenger.hh
own_sim/macros/: run_geom.mac  vis.mac
own_sim/src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorSD.cc  PMDetectorConstruction.cc  PMPhysicsList.cc  PMPrimaryGenerator.cc  PMSensitiveDetector.cc  PrimaryGeneratorAction.cc  RunAction.cc  SimulationConfig.cc  SteppingAction.cc  XRFMessenger.cc  main.cc
own_sim/test/: 01_setMaterial.mac  02_setBeamEnergy.mac  03_setIncidentAngle.mac  04_setSourceDistance.mac  05_setDetectorDistance.mac  06_setNominalTakeoff.mac  07_setSpread.mac  08_setStep.mac  09_setTotalEvents.mac  10_setChunkSize.mac  11_false_setShieldEnabled.mac  11_true_setShieldEnabled.mac  12_setShieldDetectorGap.mac  13_addShieldLayer_withgap.mac  13_addShieldLayer_withoutgap.mac  14_clearShieldLayers.mac  15_comboSizes.mac  16_addCombo.mac  17_clearCustomCombos.mac  18_run.mac  19_replacePhysics.mac
(+19 files in other folders)
